--- a/Sistema/css/Aluno/CAluno.css
+++ b/Sistema/css/Aluno/CAluno.css
@@ -189,6 +189,8 @@ body {
     padding: 2rem;
     border-radius: 10px;
     color: #333;
+    font-family: sans-serif;
+    /* Adicionado para melhor visualização */
 }
 
 .table-wrapper {
@@ -197,6 +199,8 @@ body {
     margin: 30px 0;
     border-radius: 3px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    width: 100%;
+    /* Garante que a tabela use o espaço disponível */
 }
 
 .table-title {
@@ -221,6 +225,7 @@ table.table td {
     padding: 12px 15px;
     border: 1px solid #e9e9e9;
     text-align: left;
+    vertical-align: middle;
 }
 
 table.table-striped tbody tr:nth-of-type(odd) {
@@ -234,6 +239,8 @@ table.table-hover tbody tr:hover {
 table.table td a {
     color: #1b263b;
     text-decoration: none;
+    display: inline-block;
+    margin: 0 5px;
 }
 
 table.table td a.edit {
@@ -246,10 +253,6 @@ table.table td a.delete {
 
 table.table td i {
     font-size: 18px;
-}
-
-table.table td #delete {
-    margin-left: 15px;
 }
 
 /* VISUALIZAÇÃO DE ALUNOS */
